--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,6 +6,46 @@ on:
       - main
 
 jobs:
+  build_and_push_to_docker_hub:
+    name: Push Crowdfunding_API to DockerHub
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out the repo
+        uses: actions/checkout@v3
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      - name: Login to Docker 
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Push to DockerHub
+        uses: docker/build-push-action@v4
+        with:
+          context: ./crowdfunding/
+          push: true
+          tags: ${{ secrets.DOCKER_USERNAME }}/crowdfunding_api-crowdfunding:latest
+
+  build_celery_and_push_to_docker_hub:
+    name: Push Celery to DockerHub
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out the repo
+        uses: actions/checkout@v3
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      - name: Login to Docker 
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Push to DockerHub
+        uses: docker/build-push-action@v4
+        with:
+          context: ./crowdfunding/
+          push: true
+          tags: ${{ secrets.DOCKER_USERNAME }}/crowdfunding_api-celery:latest
+
   build_gateway_and_push_to_docker_hub:
     name: Push Gateway to DockerHub
     runs-on: ubuntu-latest
@@ -24,7 +64,7 @@ jobs:
         with:
           context: ./gateway/
           push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/Crowdfunding_API_gateway:latest
+          tags: ${{ secrets.DOCKER_USERNAME }}/crowdfunding_api-gateway:latest
 
   deploy:
     name: Deploy to Server
