--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -71,6 +71,8 @@ jobs:
     runs-on: ubuntu-latest
     needs:
       - build_gateway_and_push_to_docker_hub
+      - build_celery_and_push_to_docker_hub
+      - build_and_push_to_docker_hub
     steps:
     - name: Checkout repo
       uses: actions/checkout@v3
