first MVP ready

--- a/gateway/nginx.conf
+++ b/gateway/nginx.conf
@@ -1,8 +1,11 @@
 server {
   listen 80;
 
+#   location / {
+#     return 301 http://localhost:8000/swagger/;
+#   }
   location / {
-    return 301 http://localhost:8000/swagger/;
+    return 301 https://crowdfunding.meteopavel.space/swagger/;
   }
   location /admin/ {
     proxy_set_header Host $http_host;
