fix: resolve issues with email sending and user registration

--- a/gateway/nginx.conf
+++ b/gateway/nginx.conf
@@ -4,7 +4,7 @@ server {
 #   location / {
 #     return 301 http://localhost:8000/swagger/;
 #   }
-  location / {
+  location = / {
     return 301 https://crowdfunding.meteopavel.space/swagger/;
   }
   location /admin/ {
