--- a/crowdfunding/requirements.txt
+++ b/crowdfunding/requirements.txt
@@ -11,6 +11,7 @@ click-plugins==1.1.1
 click-repl==0.3.0
 colorama==0.4.6
 Django==5.2
+django-cors-headers==4.7.0
 django-filter==25.1
 djangorestframework==3.16.0
 djangorestframework_simplejwt==5.5.0
