--- a/gateway/nginx.conf
+++ b/gateway/nginx.conf
@@ -1,11 +1,15 @@
 server {
   listen 80;
 
-#   location / {
+#   location = / {
 #     return 301 http://localhost:8000/swagger/;
 #   }
   location = / {
     return 301 https://crowdfunding.meteopavel.space/swagger/;
+    proxy_set_header        Host $host;
+    proxy_set_header        X-Real-IP $remote_addr;
+    proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header        X-Forwarded-Proto $scheme;
   }
   location /admin/ {
     proxy_set_header Host $http_host;
