--- a/crowdfunding/requirements.txt
+++ b/crowdfunding/requirements.txt
@@ -13,6 +13,7 @@ colorama==0.4.6
 Django==5.2
 django-cors-headers==4.7.0
 django-filter==25.1
+django-redis==5.4.0
 djangorestframework==3.16.0
 djangorestframework_simplejwt==5.5.0
 drf-yasg==1.21.10
